\#56 Fixed other projects spacing

--- a/src/styles/components/intro.css
+++ b/src/styles/components/intro.css
@@ -29,6 +29,7 @@
 }
 
 .intro p {
+	max-width: 95%;
     line-height: 2;
 }
 
